--- a/pom.xml
+++ b/pom.xml
@@ -1,451 +1,207 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>Java-framework</groupId>
-  <artifactId>Java-framework</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  
-  <properties>
-  		<spring.version>4.2.5.RELEASE</spring.version>
-  		<org.springframework-version>4.1.4.RELEASE</org.springframework-version>
-  		<spring.security.version>4.0.4.RELEASE</spring.security.version>
-		<org.strutsframework-version>2.3.20</org.strutsframework-version>
-		<org.hibernateframework-version>4.3.8.Final</org.hibernateframework-version>
-  </properties>
-    
-  	<dependencies>		
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>6.0.6</version>
-		</dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>Java-framework</groupId>
+	<artifactId>Java-framework</artifactId>
+	<version>1.0</version>
 
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-core</artifactId>
-		    <version>5.2.10.Final</version>
-		</dependency>
+	<properties>
+		<java-version>1.8</java-version>
+		<tiles-version>2.3.31</tiles-version>
+		<spring-version>4.1.4.RELEASE</spring-version>
+		<spring-security-version>4.0.4.RELEASE</spring-security-version>
+		<hibernate-version>4.3.8.Final</hibernate-version>
+		<strust-version>2.3.20</strust-version>
+		<mysql-connector>6.0.6</mysql-connector>
+	</properties>
 
-		<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
-		<dependency>
-		    <groupId>dom4j</groupId>
-		    <artifactId>dom4j</artifactId>
-		    <version>1.6.1</version>
-		</dependency>
+	<dependencies>
 
-		<!-- https://mvnrepository.com/artifact/antlr/antlr -->
-		<dependency>
-		    <groupId>antlr</groupId>
-		    <artifactId>antlr</artifactId>
-		    <version>2.7.7</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
-		<dependency>
-		    <groupId>org.ow2.asm</groupId>
-		    <artifactId>asm</artifactId>
-		    <version>5.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-commons -->
-		<dependency>
-		    <groupId>org.ow2.asm</groupId>
-		    <artifactId>asm-commons</artifactId>
-		    <version>5.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-tree -->
-		<dependency>
-		    <groupId>org.ow2.asm</groupId>
-		    <artifactId>asm-tree</artifactId>
-		    <version>5.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/cglib/cglib -->
-		<dependency>
-		    <groupId>cglib</groupId>
-		    <artifactId>cglib</artifactId>
-		    <version>3.2.5</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
-		<dependency>
-		    <groupId>commons-beanutils</groupId>
-		    <artifactId>commons-beanutils</artifactId>
-		    <version>1.9.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-chain/commons-chain -->
-		<dependency>
-		    <groupId>commons-chain</groupId>
-		    <artifactId>commons-chain</artifactId>
-		    <version>1.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
-		<dependency>
-		    <groupId>commons-io</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>2.5</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-lang3</artifactId>
-		    <version>3.6</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
-		<dependency>
-		    <groupId>commons-lang</groupId>
-		    <artifactId>commons-lang</artifactId>
-		    <version>2.6</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
-		<dependency>
-		    <groupId>commons-logging</groupId>
-		    <artifactId>commons-logging</artifactId>
-		    <version>1.2</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging-api -->
-		<dependency>
-		    <groupId>commons-logging</groupId>
-		    <artifactId>commons-logging-api</artifactId>
-		    <version>1.1</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
-		<dependency>
-		    <groupId>commons-codec</groupId>
-		    <artifactId>commons-codec</artifactId>
-		    <version>1.10</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-collections/commons-collections -->
-		<dependency>
-		    <groupId>commons-collections</groupId>
-		    <artifactId>commons-collections</artifactId>
-		    <version>3.2.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-digester/commons-digester -->
-		<dependency>
-		    <groupId>commons-digester</groupId>
-		    <artifactId>commons-digester</artifactId>
-		    <version>2.1</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-		<dependency>
-		    <groupId>commons-fileupload</groupId>
-		    <artifactId>commons-fileupload</artifactId>
-		    <version>1.3.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
-		<dependency>
-		    <groupId>commons-httpclient</groupId>
-		    <artifactId>commons-httpclient</artifactId>
-		    <version>3.1</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
-		<dependency>
-		    <groupId>commons-net</groupId>
-		    <artifactId>commons-net</artifactId>
-		    <version>3.6</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
-		<dependency>
-		    <groupId>commons-validator</groupId>
-		    <artifactId>commons-validator</artifactId>
-		    <version>1.6</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/commons-vfs/commons-vfs -->
-		<dependency>
-		    <groupId>commons-vfs</groupId>
-		    <artifactId>commons-vfs</artifactId>
-		    <version>1.0</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.atmosphere/atmosphere-compat-jbossweb -->
-		<dependency>
-		    <groupId>org.atmosphere</groupId>
-		    <artifactId>atmosphere-compat-jbossweb</artifactId>
-		    <version>2.0.1</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.atmosphere/atmosphere-compat-tomcat -->
-		<dependency>
-		    <groupId>org.atmosphere</groupId>
-		    <artifactId>atmosphere-compat-tomcat</artifactId>
-		    <version>2.0.1</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
-		<dependency>
-		    <groupId>org.freemarker</groupId>
-		    <artifactId>freemarker</artifactId>
-		    <version>2.3.23</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-annotations -->
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-annotations</artifactId>
-		    <version>3.5.6-Final</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-commons-annotations -->
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-commons-annotations</artifactId>
-		    <version>3.3.0.ga</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-validator</artifactId>
-		    <version>5.4.1.Final</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpclient</artifactId>
-		    <version>4.5.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
-		<dependency>
-		    <groupId>org.apache.httpcomponents</groupId>
-		    <artifactId>httpcore</artifactId>
-		    <version>4.4.6</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
-		<dependency>
-		    <groupId>org.javassist</groupId>
-		    <artifactId>javassist</artifactId>
-		    <version>3.21.0-GA</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-		<dependency>
-		    <groupId>org.jsoup</groupId>
-		    <artifactId>jsoup</artifactId>
-		    <version>1.10.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
-		<dependency>
-		    <groupId>javax.servlet</groupId>
-		    <artifactId>jstl</artifactId>
-		    <version>1.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
-		<dependency>
-		    <groupId>javax.transaction</groupId>
-		    <artifactId>jta</artifactId>
-		    <version>1.1</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-		<dependency>
-		    <groupId>javax.mail</groupId>
-		    <artifactId>mail</artifactId>
-		    <version>1.4.7</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/ognl/ognl -->
-		<dependency>
-		    <groupId>ognl</groupId>
-		    <artifactId>ognl</artifactId>
-		    <version>3.2.2</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
-		<dependency>
-		    <groupId>org.quartz-scheduler</groupId>
-		    <artifactId>quartz</artifactId>
-		    <version>2.3.0</version>
-		</dependency>
-
-
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-		<dependency>
-		    <groupId>org.slf4j</groupId>
-		    <artifactId>slf4j-api</artifactId>
-		    <version>1.7.25</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
-		<dependency>
-		    <groupId>org.slf4j</groupId>
-		    <artifactId>slf4j-log4j12</artifactId>
-		    <version>1.7.25</version>
-		    <scope>test</scope>
-		</dependency>
-
-	<!-- Spring -->
+		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
+			<artifactId>spring-core</artifactId>
+			<version>${spring-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aspects</artifactId>
-			<version>${spring.version}</version>
+			<version>${spring-version}</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 
 		<!-- Spring Security -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring-security-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring-security-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring-security-version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>${spring.security.version}</version>
+			<version>${spring-security-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-config-browser-plugin -->
+		<!-- STRUTS 2 -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-config-browser-plugin</artifactId>
-		    <version>2.5.12</version>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-core</artifactId>
+			<version>${strust-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-core -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-core</artifactId>
-		    <version>2.5.12</version>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-json-plugin</artifactId>
+			<version>${strust-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-json-plugin -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-json-plugin</artifactId>
-		    <version>2.5.12</version>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-spring-plugin</artifactId>
+			<version>${strust-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-spring-plugin -->
+		<!-- HIBERNATE -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-spring-plugin</artifactId>
-		    <version>2.5.12</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-testng-plugin -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-testng-plugin</artifactId>
-		    <version>2.5.12</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-tiles-plugin -->
+		<!-- Template web -->
 		<dependency>
-		    <groupId>org.apache.struts</groupId>
-		    <artifactId>struts2-tiles-plugin</artifactId>
-		    <version>2.5.12</version>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-tiles-plugin</artifactId>
+			<version>${tiles-version}</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<!-- WEB -->
 		<dependency>
-		    <groupId>org.testng</groupId>
-		    <artifactId>testng</artifactId>
-		    <version>6.11</version>
-		    <scope>test</scope>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-api -->
 		<dependency>
-		    <groupId>org.apache.tiles</groupId>
-		    <artifactId>tiles-api</artifactId>
-		    <version>3.0.7</version>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+			<scope>compile</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-core -->
 		<dependency>
-		    <groupId>org.apache.tiles</groupId>
-		    <artifactId>tiles-core</artifactId>
-		    <version>3.0.7</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.tiles/tiles-jsp -->
 		<dependency>
-		    <groupId>org.apache.tiles</groupId>
-		    <artifactId>tiles-jsp</artifactId>
-		    <version>3.0.7</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/xml-apis/xml-apis -->
+		<!-- COMMONs -->
 		<dependency>
-		    <groupId>xml-apis</groupId>
-		    <artifactId>xml-apis</artifactId>
-		    <version>2.0.2</version>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.ws.commons.schema/XmlSchema -->
 		<dependency>
-		    <groupId>org.apache.ws.commons.schema</groupId>
-		    <artifactId>XmlSchema</artifactId>
-		    <version>1.4.7</version>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.struts.xwork/xwork-core -->
 		<dependency>
-		    <groupId>org.apache.struts.xwork</groupId>
-		    <artifactId>xwork-core</artifactId>
-		    <version>2.3.33</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.6</version>
 		</dependency>
 
-  	</dependencies>
-  
-  <build>
-  	<plugins>
-		<plugin>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-dependency-plugin</artifactId>
-		    <configuration>
-		        <outputDirectory>
-		            /lib
-		        </outputDirectory>
-		    </configuration>
-		</plugin>
-  	</plugins>
-  </build>
-  
+		<dependency>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
+		<!-- logging -->
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<source>${java-version}</source>
+					<target>${java-version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<warSourceDirectory>WebContent</warSourceDirectory>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<configuration>
+					<outputDirectory>
+						/lib
+					</outputDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
